# Judicor

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml
docker/: Dockerfile.cli  Dockerfile.control-plane
docs/: Judicor–Initial_Design&Concept_Document.md
docs/onboarding/: overview.md
docs/roadmap/: JUDICOR_HACKATHON_ROADMAP.md
src/judicor/ai/: factory.py  interface.py  policy.py  roles.py
src/judicor/ai/implementations/: dummy.py  gemini.py
src/judicor/cli/: app.py
src/judicor/client/: factory.py  interface.py
src/judicor/client/implementations/: dummy.py  http.py
src/judicor/control_plane/: app.py  run.py
src/judicor/domain/: messages.py  models.py  results.py  state.py
src/judicor/identity/: init_flow.py  model.py  store.py
src/judicor/session/: history_store.py  incident_store.py  store.py  timeline_store.py  utils.py
tests/: conftest.py  test_ai_dummy_reasoner.py  test_ai_factory.py  test_ai_gemini_reasoner.py  test_ai_policy.py  test_cli_app.py  test_client_dummy.py  test_client_factory.py  test_control_plane.py  test_domain_results.py  test_domain_state.py  test_history_store.py  test_http_client.py  test_identity_init_flow.py  test_identity_store.py  test_incident_store.py  test_session_store.py  test_timeline_store.py
